Finish NPF style removal
Missed a spot!

--- a/Theme.html
+++ b/Theme.html
@@ -105,11 +105,8 @@
 			a.link h3 {
 				color: {block:IfCustomColors}{color:Links}{/block:IfCustomColors}{block:IfNotCustomColors}{AccentColor}{/block:IfNotCustomColors};
 			}
-			a.link blockquote, .npf-link-block .title, .npf-link-block .description {
+			a.link blockquote {
 				color: {block:IfCustomcolors}{color:Text}{/block:IfCustomColors}{block:IfNotCustomColors}{TitleColor}{/block:IfNotCustomColors};
-			}
-			.npf-link-block .poster .title {
-				text-shadow: 0 0 3px {block:IfCustomColors}{color:Background}{/block:IfCustomColors}{block:IfNotCustomColors}{BackgroundColor}{/block:IfNotCustomColors};
 			}
 			div.answerbox {
 				border: 1px solid {block:IfCustomColors}{color:Text}{/block:IfCustomColors}{block:IfNotCustomColors}{TitleColor}{/block:IfNotCustomColors};
