Separate reblog items more clearly

--- a/Theme.html
+++ b/Theme.html
@@ -42,8 +42,8 @@
 		<meta name="theme-color" content="{block:IfCustomColors}{color:Background}{/block:IfCustomColors}{block:IfNotCustomColors}{BackgroundColor}{/block:IfNotCustomcolors}">
 		<link rel="alternate" type="application/rss+xml" href="{RSS}">
 		<link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/Vf7pfceur/normalize.css">
-		<link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/MILpmtkg2/vision_core.css">{block:IfNotBackgroundImage}
-		<link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/9w5pmau0x/vision_plain.css">{/block:IfNotBackgroundImage}
+		<link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/bRppmtkxu/vision_core.css">{block:IfNotBackgroundImage}
+		<link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/lNypmtkl7/vision_plain.css">{/block:IfNotBackgroundImage}
 		<link rel="stylesheet" type="text/css" href="https://static.tumblr.com/2wliono/EJxpafak4/socicon.css">
 		{PostTypographyStyles}
 		<style id="vision_dynamic">
@@ -108,6 +108,9 @@
 			}
 			section.body .reblog .user .username {
 				color: var(--title);
+			}
+			section.body .reblog + .reblog {
+				border-color: rgba(var(--rgbtitle), 0.1);
 			}
 			.ask-item > div {
 				background: rgba(var(--rgbtitle), 0.1);
